# supernova

./: .gitignore  README.md  generate_data.py  pyproject.toml  query_book.py  read_store.py  test.py  test_generator.py
.github/workflows/: python_checks.yml
docs/example/: config.yml  store.yml
docs/example/feature_sets/: accounts_a.yml  bacen.yml  bacen_cng.yml  bacen_ind.yml  individuals_a.yml
notebooks/: data.ipynb
supernova/: metadata.py  query.py
tests/: test_rangedomain.py
